<resources>
    <string name="app_name">TestObservability</string>
    <string name="get_normal_text">Get normal data</string>
    <string name="get_corrupt_text">Get corrupt data</string>
    <string name="get_error_text">Stream error</string>
    <string name="status">Status: %s</string>
    <string name="data">Data: %s</string>
    <string name="status_idle">Status: IDLE</string>
    <string name="data_na">Data: N/A</string>
</resources>
